# template-embedded

./: CMakeLists.txt  Makefile  README.md  gcc-arm-none-eabi.cmake  uncrustify.cfg
CubeMX/: TODO
